# ECPCTemplet

./: AhoCorasick.cpp  Hashing.cpp  KMP.cpp  TrieNumbers.cpp
CP/: CMakeLists.txt  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc
CP/Clean/: clean.cpp  geo.cpp
CP/Combinatorics/: nCr.cpp  stars_and_bars.cpp
CP/DP Optimization/: Convex Hull Trick.cpp
CP/Data Structure/: 2D BIT.cpp  4D prefix sum.cpp  BIT.cpp  Coordinate Compression.cpp  DSU with array sz.cpp  DSU.cpp  Dynamic Segment Tree.cpp  Lazy Segment Tree.cpp  MO.cpp  Max Sum in Subarray With update.cpp  Merge Sort Tree With update.cpp  Merge sort tree.cpp  Monotonic Queue.cpp  Monotonic Stack.cpp  Order Set.cpp  Palindromic Tree Persistent.cpp  Persistent Trie.cpp  SQRT.cpp  Segment Tree Beats.cpp  Segment Tree.cpp  Segtree Tree Iterative.cpp  Sparse Segment Tree.cpp  Sparse_Table.cpp  Treap persistent.cpp
CP/Geometry/: Angle Between Vectors.cpp  Area of Polygon.cpp  Area of Triangle.cpp  Bisector.cpp  Center Circle Pass 3 points.cpp  Check if polygon is rectangle and Square.cpp  Dist Between 2 Segment.cpp  Dist from point to line.cpp  Dist from point to seg.cpp  Distance between 2 polygons.cpp  Distance between rays.cpp  Equation Line by point and vector.cpp  Equation Line passing through 2 points.cpp  Finding common tangents to two circles.cpp  Intersec Between 2 line.cpp  Intersection Between Circle and Line.cpp  Intersection between 2 Circle.cpp  Intersection between line and segment.cpp  Intersection between two segments.cpp  Is 2 Segment Intersect.cpp  Is 2 points on same side of line.cpp  Is point on segment.cpp  Is the point on line.cpp  Is the point on ray.cpp  Lattice Points.cpp  Length of the union of segments.cpp  Location of Point in line.cpp  MEC.cpp  Minkowski sum of convex polygons.cpp  Point Location Relative to Polygon.cpp  Polar Angle.cpp  Polar Sort.cpp  WindingNumber for Integers.cpp  struct line.cpp  two line segments are parallel.cpp  type of intersection between Circle and Line.cpp  vector length.cpp  winding Number.cpp
CP/Graph/: BCC.cpp  Bellman-Ford.cpp  Bridges.cpp  Bron–Kerbosch.cpp  Dinics Algorithm.cpp  Floyed.cpp  Hungarian Algorithm.cpp  SCC_Kosaraju.cpp  SCC_Tarjan_s.cpp  articulation_points.cpp  small to large.cpp
CP/Math/: Fast_Power.cpp  MatrixExpo.cpp  Mod INV by phi.cpp  XOR Basis.cpp  bezout_sIdentity.cpp  mod inverse for not prime.cpp
CP/Number Theory/: CRT.cpp  Euler_s_totient.cpp  PrimeFactorization.cpp  divisors.cpp  is_prime.cpp  linearSieve.cpp
CP/Random/: random_range.cpp
CP/Strings/: Hashing.cpp  Hashing2D.cpp  KMP for integer.cpp  KMP.cpp  SuffixArrayWithSparseTable.cpp  SuffixArrayWithVectorInt.cpp  Suffux_Array.cpp  Trie.cpp  Trie01.cpp  ahoCorasick.cpp  compute_automaton.cpp
CP/Tree/: Centroid.cpp  HLD.cpp  LCA with Sparse Tables.cpp  MO on Tree.cpp  Max Query by LCA.cpp  diameter.cpp  eular_tour.cpp  lca.cpp
CP/fast/: dp bitset.cpp
DP Optimizations/: CHtrick.cpp  DP Divide and Conquer Optimization.cpp  Knuth.cpp  LiChao.cpp  SOS.cpp
DataStructure/: 2D BIT.cpp  BIT.cpp  BinaryTrie.cpp  DSU.cpp  DynamicConnectivity.cpp  DynamicSeg.cpp  LazySegmantTree.cpp  Log N DSU.cpp  MergeSortTree.cpp  MergeSortTreeWithUpdate.cpp  Mo's with gilbertOrder.cpp  Mo's.cpp  MonoQueue.cpp  Offline 2D Bit.cpp  OrderedSet.cpp  Persistent Segment Tree.cpp  RollBackDSU.cpp  SparseTable.cpp  StandardSegmantTree.cpp  WaveletTree.cpp  dymanicLazy.cpp  kactl segment tree.cpp  mergasort segmant tree.cpp
GEO-2/: Circle.cpp  Halfplane.cpp  Line.cpp  Point.cpp  Polygon.cpp  Triangle.cpp
Geomerty/: Abd elwahab laibrary.cpp  CircleCirclePointOfIntersection.cpp  CircleFrom3Points.cpp  CircleIntersectionArea.cpp  ClosetPairOfPoints.cpp  GeneralFun.cpp  HalfPlaneIntersection.cpp  InPolygon.cpp  Kernal of Polygon.cpp  MincoviskySum.cpp  MinimumEnclosingCircle.cpp  Notes.TXT  Point.cpp  PointInHull.cpp  PolygonArea.cpp  all_anti_podal.cpp  angle.cpp  bluocaroot.cpp  convexhull.cpp  hullDiameterWidth.cpp  lines.cpp
Graph/: 2-SAT.cpp  Bridges.cpp  Dinic.cpp  EulerianDirected .cpp  EulerianUnDirected .cpp  Hopcroft–Karp.cpp  Hungarian.cpp  Kosaraju.cpp  LCA O(1).cpp  LCA.cpp  MCMF_struct.cpp  Max Flow.cpp  MinCostMaxFlow.cpp  MinCostMaxFlowUseDijkstra.cpp  MinCostMaxFlowWithNegativeCycles.cpp  SCC.cpp  Tarjan.cpp  cutpoint.cpp  notes for MinCut and MaxFlow
Liner Algebra/: GaussLinearEquations.cpp  Matrix power.cpp  MaxXorSubsitInRang.cpp  XorBasis.cpp
Math/: FFT.cpp  FFTMOD.cpp  FWHT.cpp  (+9 more)
(+95 files in other folders)
